--- a/platformer/.godot/editor/editor_layout.cfg
+++ b/platformer/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://player/bullet.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://game_singleplayer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://player/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
+open_scenes=PackedStringArray("res://player/bullet.tscn", "res://game_splitscreen.tscn", "res://game_singleplayer.tscn")
+current_scene="res://game_singleplayer.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -43,8 +43,8 @@ position=Vector2i(0, 32)
 
 [ScriptEditor]
 
-open_scripts=["res://player/bullet.gd", "res://game_splitscreen.gd"]
-selected_script="res://player/bullet.gd"
+open_scripts=["res://player/bullet.gd", "res://game.gd", "res://game_splitscreen.gd", "res://player/player.gd"]
+selected_script="res://player/player.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
